--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lintstock-cli",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "A tool to collate, process and contextualise data from Lintstock reports",
   "license": "SEE LICENSE IN LICENSE",
   "author": "Al Pagan <generamics@gmail.com>",
@@ -8,13 +8,13 @@
   "main": "index.js",
   "scripts": {
     "gemini": "npx -y https://github.com/google-gemini/gemini-cli",
-    "prepare": "node scripts/prepare.js",
+    "build:reports": "node scripts/prepare.js",
     "serve": "node scripts/serve.js"
   },
   "dependencies": {
     "chalk": "^4.1.2",
     "cli-progress": "^3.12.0",
-    "xlsx": "^0.18.5",
+    "exceljs": "^4.4.0",
     "zod": "^4.0.5"
   },
   "devDependencies": {
