feat: Add support for PDF documents and expand data structure
This commit introduces several significant enhancements to the project:

- Adds the ability to process PDF documents from the `data/surveys` and `data/proposals` directories and convert them into Markdown format.
- Reorganizes the `data` and `context` directories to categorize files by type (reports, surveys, proposals), improving clarity and scalability.
- Updates the `.gitignore` file to reflect the new directory structure.
- Enhances the `README.md` with updated instructions for data preparation and a more detailed directory structure guide.
- Introduces a new `pdf-to-markdown.js` script to handle the conversion of PDF files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,16 @@
 .env
-data/*
-!data/GEMINI.md
-reports/*
-!reports/GEMINI.md
+data/reports/*
+!data/reports/GEMINI.md
+data/surveys/*
+!data/surveys/GEMINI.md
+data/proposals/*
+!data/proposals/GEMINI.md
+context/reports/*
+!context/reports/GEMINI.md
+context/surveys/*
+!context/surveys/GEMINI.md
+context/proposals/*
+!context/proposals/GEMINI.md
 output/*
 !output/GEMINI.md
 node_modules/
