Refactor: Generalize build process for multiple data types
This commit refactors the data preparation process to support multiple data types, including reports, proposals, and surveys.

Key changes include:
- A new `build:all` script to process all data sources.
- Updates to the `prepare.js` script to handle the new `context` directory structure.
- Improved error handling in the `gemini-commit.sh` script.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "main": "index.js",
   "scripts": {
     "gemini": "npx -y https://github.com/google-gemini/gemini-cli",
+    "build:all": "npm run build:reports && npm run build:proposals && npm run build:surveys",
     "build:reports": "node scripts/prepare.js",
     "build:proposals": "node scripts/pdf-to-markdown.js --input-dir data/proposals --output-dir context/proposals",
     "build:surveys": "node scripts/pdf-to-markdown.js --input-dir data/surveys --output-dir context/surveys",
